# CruscottoPMI

./: .gitignore  00_home.py  Alpha_2023.xlsx  Alpha_Srl_2022.xlsx  Avvia_CruscottoPMI.bat  Benchmark_di_Settore.csv  Beta_Spa_2022.xlsx  CHANGELOG.md  CHANGELOG_v0.4.md  CHANGELOG_v0.5.md  CHANGELOG_v0.6.md  CHANGELOG_v0.7.md  Esempio_Bilancio_PMI_Multiano.xlsx  README.md  README.txt  app.py  app_demo.py  app_demo_fixed.py  benchmark_settore_avanzato.csv  bilancio_simulato.xlsx  newapp.py  pyproject.toml  requirements.txt  run_app.py  streamlit_app.py  style.py  utils.py
.streamlit/: config (1).toml  config.toml
assets/: theme.css
cruscotto_pmi/: __init__.py  alias.py  charts.py  data_loader.py  demo.py  kpi_calculator.py  pdf_generator.py  setup.py  theme_loader.py  utils.py  yoy_analysis.py
materiale test/: Delta_SPA_2020.xlsx  Delta_SPA_2021.xlsx  Delta_SPA_2022.xlsx  Gamma_SRL_2020.xlsx  Gamma_SRL_2021.xlsx  Gamma_SRL_2022.xlsx
pages/: 00_home.py  01_kpi.py  01_scheda_azienda.py  02_dashboard_kpi.py  02_kpi.py  02_yoy.py  03_confronto.py  04_export.py  04_yoy.py  05_analisi_avanzata.py  06_export.py  07_debug_bilanci.py
src/cruscotto_pmi/: data_loader.py  pdf_generator.py  utils.py
src/cruscotto_pmi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_kpi.py  test_utils.py
